[package]
name = "kaycomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
vm = { path = "../vm" }
chumsky = { version = "1.0.0-alpha.4", features = ["label", "nightly"] }
ariadne = "0.3.0"