[package]
name = "kaycomp"
version = "0.1.0"
edition = "2021"

[dependencies]
vm = { path = "../vm" }
chumsky = { git = "https://github.com/zesterer/chumsky.git", rev = "652353d", features = ["label", "nightly"] }
ariadne = "0.3.0"
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "d4a94fb", package = "salsa-2022" }
dashmap = "5.5.3"
